test/Fail/Issue2456.err
Issue2456.agda:4,1-9,11: error: [Syntax.WrongContentBlock]
Unexpected declaration
